Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-130668

QSoundEffect::setSource does not change audio source

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.5.8, 6.8.1, 6.9.0 FF
    • 6.5, 6.8
    • Multimedia
    • None
    • All
    • aa1613a31 (dev), 95ec80b59 (6.8), 48d5915f9 (tqtc/lts-6.5)
    • Multimedia wk 43-44

      When calling setSource a second time, the sound would not change because of a regression introduced in QTBUG-118099. The reason is that QSoundEffect's private m_audioBuffer is no longer reset, and the old audio buffer is reused unless the FFmpeg media backend is present. 

        For Gerrit Dashboard: QTBUG-130668
        # Subject Branch Project Status CR V

            johanseg Jøger Hansegård
            johanseg Jøger Hansegård
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes